[project]
name = "Phantom"
description = "A Multi-agent reinforcement-learning simulator framework."
version = "2.2.0"
authors = [
    { name = "JPM AI Research" }
]
requires-python = ">3.8.0"
readme = "README.md"
classifiers=[
    "Development Status :: 5 - Production",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
keywords=["ai", "research", "reinforcement learning", "simulator", "multi-agent"]
dynamic=["dependencies"]

[tool.mypy]
python_version = 3.8

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "gymnasium.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ray.*"
ignore_missing_imports = true



[tool.ruff]
ignore = ["E501"] # E203, W503

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

